# rust-plugin-system

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci-clean.yml  ci.yml  clippy-fast.yml
plugin-annotations/: Cargo.toml  README.md
plugin-annotations/src/: lib.rs
plugin-host/: Cargo.toml  README.md
plugin-host/examples/: example_host.rs  manager_watcher.rs
plugin-host/src/: lib.rs  main.rs  plugin_manager.rs
plugin-host/tests/: aggregation_and_fallback.rs  manager_load_unload.rs  unload_correctness.rs
plugin-interface/: Cargo.toml  README.md
plugin-interface/src/: handle.rs  lib.rs  manager.rs
plugin-interface/tests/: close_counter.rs  integration_lookup.rs  manager_integration.rs  watcher_integration.rs  watcher_manager_integration.rs
plugins/plugin-a/: Cargo.toml  README.md
plugins/plugin-a/src/: lib.rs
plugins/plugin-b/: Cargo.toml  README.md
plugins/plugin-multi/: Cargo.toml
plugins/plugin-multi/src/: lib.rs
scripts/: README.md  build_plugins.ps1  build_plugins.sh
