[package]
name = "plugin-host"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8"
plugin-interface = { path = "../plugin-interface", features = ["watch"] }

[lib]
# Build as a normal Rust library. If you need a C-compatible dynamic library (cdylib)
# for loading by other languages, re-enable `crate-type = ["cdylib"]`.
# Keeping this as a normal library makes `plugin-host` usable by other Rust programs
# without colliding with the binary output.
