[package]
name = "plugin-interface"
version = "0.1.0"
edition = "2021"

[lib]
# Normal Rust library crate. Hosts and plugins depend on this for trait and ABI types.

[dependencies]
libloading = "0.8"
libc = "0.2"
inventory = "0.2"
notify = { version = "5.1", optional = true }

[features]
watch = ["notify"]

[dev-dependencies]
tempfile = "3.6"
